<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">app2go</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
 
    <string name="startQuote">Start Quote</string>
    <string name="stopQuote">Stop Quote</string>
    
    <string name="nextPage">Next Page</string>
    <string name="prevPage">Prev Page</string>
    <string name="addQuote">Add</string>
    <string name="saveQuote">Save</string>
            
    <string name="skipMail">Skip Mail</string>
    <string name="writeMail">Write Mail</string>
    <string name="settings">Settings</string>
    <string name="debugging">Debug</string>
    <string name="syncMail">Sync Mail</string>
    <string name="searchMail">Search Mail</string>
    <string name="offLine">Off Line</string>
    <string name="greeting">Welcome to Voice Quote</string>

    <string name="myEmail">My eMail</string>
    <string name="mailAccount">andy1chennk@gmail.com</string>
    <string name="emailAddressHint">my eMail address</string>
    <string name="myPassword">My Password</string>
    <string name="mailPassword">Tanan1559</string>
    <string name="readbody">Read subject and body when offline</string>
    <string name="contact">Contact</string>
    <string name="addContact">Save</string>
    <string name="writeToType">Speak email username then mail server name</string>
 	<string name="cancel">Cancel</string>
 
    <string name="ok">OK</string>

    <string name="cmd_continue">Command 1</string>
    <string name="cmd_detail">Command 2</string>
    <string name="cmd_skip">Command 3</string>    
    <string name="cmd_stop">Command 4</string> 
        
    <string name="save">Save</string>
    <string name="clean">Clean</string>
        
</resources>
