<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
        
<GridLayout 
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true" >
        
    <EditText
        android:id="@+id/sleepTime"
        android:layout_column="0"
        android:layout_row="0"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:text="5"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/quoteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="UCO:0.0,SCO:2.0,GASL:3.0,GASX:4.0,ERX:5.5,ERY:5.0,UGAZ:5.5,DGAZ:5.0,NUGT:5.5,DUST:5.0,SPXL:5.5,SPXS:5.0,FAS:5.5,FAZ:5.0,TECL:5.5,TECS:5.0,TQQQ:5.5,SQQQ:5.0,SOXL:5.5,SOXS:5.0,EDC:5.5,EDZ:5.0,YINN:5.5,YANG:5.0,BIB:5.5,URE:5.5,DRN:5.5,DRV:5.0"
        android:textColor="#000000" >
    </EditText>
    
    <Button
        android:id="@+id/saveQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/saveQuote" />
    
     <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/cancel" />   
        
</GridLayout>

</ScrollView>