<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
        
<GridLayout 
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true" >

    <EditText
        android:id="@+id/quote1"
        android:layout_column="0"
        android:layout_row="0"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:text="AAPL"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/target1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="0.0"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/quote2"
        android:layout_column="0"
        android:layout_row="1"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="GOOG"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/target2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="2.0"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/quote3"
        android:layout_column="0"
        android:layout_row="2"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="MSFT"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/target3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="3.0"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/quote4"
        android:layout_column="0"
        android:layout_row="3"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="ORCL"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/target4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="4.0"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/quote5"
        android:layout_column="0"
        android:layout_row="4"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="FB"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/target5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="5.5"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/quote6"
        android:layout_column="0"
        android:layout_row="5"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text=""
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/target6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text=""
        android:textColor="#000000" >
    </EditText>

    <CheckBox
        android:id="@+id/writeToType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/writeToType" />
        
    <Button
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/addContact" />
    
     <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/cancel" />   
        
</GridLayout>

</ScrollView>